# Eling

./: API_REFERENCE.md  ELING_API.postman_collection.json  LOCAL_TESTING.md  QUICK_START.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
docs/: NOTIFICATION_SYSTEM.md
planning/: API_SPECIFICATION.md  ARCHITECTURE_OVERVIEW.md  BACKEND_ENGINEER_PLAN.md  DATABASE_SCHEMA.md  DATA_FLOW_DIAGRAM.md  DEPLOYMENT_PLAN.md  DEVSECOPS_LAB_PLAN.md  ELING_DESIGN_SYSTEM.md  FRONTEND_ENGINEER_PLAN.md  IMPLEMENTATION_ROADMAP.md  PROJECT_TIMELINE.md  PSYCHOLOGICAL_TOOLS_LIBRARY.md  README.md  RISK_ASSESSMENT.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240115000000_init.sql  20240116000000_notifications.sql  20260116000000_kraepelin_results.sql  20260116020000_event_management.sql
src-tauri/migrations/admin/: 001_add_sync_tracking.sql
src-tauri/migrations/candidate/: 001_init_candidate.sql
src-tauri/recordings/session-1768696155097-9tgg9fgpo/: metadata.json
src-tauri/recordings/session-1768697931592-aw8ilhogw/: metadata.json
src-tauri/recordings/session-1768698597668-a335jg1hm/: metadata.json  screen.webm
src-tauri/src/: lib.rs  main.rs  tests.rs
src-tauri/src/api_server/: mod.rs  tests.rs
src-tauri/src/commands/: auth.rs  dashboard.rs  events.rs  kraepelin.rs  mod.rs  notifications.rs  server.rs  sync.rs  tools.rs
src-tauri/src/db/: admin_sync.rs  candidate.rs  candidate_test_mod.rs  candidate_tests.rs  mod.rs  models.rs  seed.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/surveillance/: mod.rs  window.rs
src-tauri/src/sync/: mod.rs  tests.rs
(+64 files in other folders)
