[package]
name = "eling"
version = "0.1.0"
description = "Eling - Modular Psychotest Platform"
authors = ["Robin"]
edition = "2021"
default-run = "eling"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "eling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
nokhwa = { version = "0.10", features = ["input-avfoundation", "output-threaded"] } # avfoundation for macOS
image = "0.24"
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"
lazy_static = "1.4"

# REST API Server (Admin)
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP Client (Candidate)
reqwest = { version = "0.11", features = ["json", "multipart"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.0"




# Trigger rebuild
